# research-agent-system

./: .gitignore  README.md  pyproject.toml
memory/: 2026-03-05.md
src/ai_research_agent/: __init__.py  orchestrator.py  project.py
src/ai_research_agent/agents/: __init__.py  base.py  experiment.py  ideation.py  planning.py  writing.py
src/ai_research_agent/models/: __init__.py  common.py  experiment.py  paper.py  plan.py  proposal.py
src/ai_research_agent/tools/: __init__.py  execution.py  filesystem.py  search.py
tests/: conftest.py  test_experiment.py  test_ideation.py  test_integration.py  test_models.py  test_planning.py  test_tools.py  test_writing.py
